--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,19 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <a class="navbar-brand" href="/" id="logo">Online Music Subscription</a>
+        <div class="navbar-nav">
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
+        </div>
         <div class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link"href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i> Register</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+            {% if g.current_user == None %}
+                <li class="nav-item"><a class="nav-link"href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i> Register</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+            {% else %}
+                <li class="nav-item"><a class="nav-link" ><i class="fas fa-user"></i> {{ g.current_user['user_name']}}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+            {% endif %}
+            
         </div>
     </nav>
     {% block body %} {% endblock %}
