images implemented. assignment (basically?) done.

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,16 @@
 {% block body %}
 <div class="row">
     <div style="padding-left: 20px;" class="col-sm-4">
-        <h1><i class="fas fa-list"></i> Subscriptions</h1>
+        <h1><i class="fas fa-star"></i> Subscriptions</h1>
         {% if user_subscriptions|length > 0 %}
             {% for song in user_subscriptions %}
             <div class="card" >
                 <div class="row">
-                    <div class="col-sm-10">
+                    <div class="col-sm-2">
+                        {% set artist_name_list = song['artist'].split(' ') %}
+                        <img style="width:100px;height:100px;" src="https://cc-assignment2-berke-artist-images.s3-ap-southeast-2.amazonaws.com/{{ artist_name_list|join('+') }}.jpg" alt="">
+                    </div>
+                    <div class="col-sm-8">
                         <div class="card-body">
                         <h5 class="card-title">{{ song['title'] }}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">{{ song['artist'] }} • {{ song['year'] }}</h6>
@@ -79,32 +83,37 @@
         </div>
     </div>
     <div class="col-sm-6">
+        <i><h1 style="padding-bottom: 10px;"><i class="fas fa-music"></i> Query Results</h1></i>
         {% if queried_music|length > 0 %}
-                {% for song in queried_music %}
-                <div class="card" >
-                    <div class="row">
-                        <div class="col-sm-10">
-                            <div class="card-body">
-                            <h5 class="card-title">{{ song['title'] }}</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">{{ song['artist'] }} • {{ song['year'] }}</h6>
-                            </div>
-                        </div>
-                        <div style="padding-top: 35px;" class="col-sm-2">
-                            <form action="/" method="POST">
-                                <input type="hidden" name="post_type" value="subscribe">
-                                <input type="hidden" name="song_to_subscribe" value="{{ song['title'] }}">
-                                {% if g.current_user != None %}
-                                    <input style="font-size:small" type="submit" class="btn btn-info" value="Subscribe">
-                                {% else %}
-                                    <input style="font-size:small" type="submit" class="btn btn-info" value="Subscribe" disabled>
-                                {% endif %}
-                            </form>
+            {% for song in queried_music %}
+            <div class="card" >
+                <div class="row">
+                    <div class="col-sm-1">
+                        {% set artist_name_list = song['artist'].split(' ') %}
+                        <img style="width:100px;height:100px;" src="https://cc-assignment2-berke-artist-images.s3-ap-southeast-2.amazonaws.com/{{ artist_name_list|join('+') }}.jpg" alt="">
+                    </div>
+                    <div style="padding-left: 30px;" class="col-sm-9">
+                        <div class="card-body">
+                        <h5 class="card-title">{{ song['title'] }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ song['artist'] }} • {{ song['year'] }}</h6>
                         </div>
                     </div>
+                    <div style="padding-top: 35px;" class="col-sm-2">
+                        <form action="/" method="POST">
+                            <input type="hidden" name="post_type" value="subscribe">
+                            <input type="hidden" name="song_to_subscribe" value="{{ song['title'] }}">
+                            {% if g.current_user != None %}
+                                <input style="font-size:small" type="submit" class="btn btn-info" value="Subscribe">
+                            {% else %}
+                                <input style="font-size:small" type="submit" class="btn btn-info" value="Subscribe" disabled>
+                            {% endif %}
+                        </form>
+                    </div>
                 </div>
-                {% endfor %}
+            </div>
+            {% endfor %}
         {% else %}
-                <i><h4>No result is retrieved. Please query again.</h4></i>
+            <i><h4>No result is retrieved. Please query again.</h4></i>
         {% endif %}
         
     </div>
