--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
 
 {% block body %}
 <div class="row">
-    <div style="padding-left: 20px;" class="col-sm-4">
+    <div style="padding-left: 20px;" class="col-sm-5">
         <h1><i class="fas fa-star"></i> Subscriptions</h1>
         {% if user_subscriptions|length > 0 %}
             {% for song in user_subscriptions %}
-            <div class="card" >
+            <div class="card bg-dark text-white" >
                 <div class="row">
                     <div class="col-sm-2">
                         {% set artist_name_list = song['artist'].split(' ') %}
@@ -58,7 +58,7 @@
     </script>
     <div class="col-sm-2">
         <h1><i class="fas fa-search"></i> Query</h1>
-        <div class="card" style="width: 18rem;">
+        <div class="card bg-secondary text-white" style="width: 18rem;">
             <div class="card-body">
                 <form action="javascript:void(0);" method="POST" id="queryForm" style="padding-bottom: 20px;">
                     <div class="form-group">
@@ -82,17 +82,17 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-5">
         <i><h1 style="padding-bottom: 10px;"><i class="fas fa-music"></i> Query Results</h1></i>
-        {% if queried_music|length > 0 %}
+        {% if made_query == True and queried_music|length > 0 %}
             {% for song in queried_music %}
-            <div class="card" >
+            <div class="card bg-dark text-white" >
                 <div class="row">
                     <div class="col-sm-1">
                         {% set artist_name_list = song['artist'].split(' ') %}
                         <img style="width:100px;height:100px;" src="https://cc-assignment2-berke-artist-images.s3-ap-southeast-2.amazonaws.com/{{ artist_name_list|join('+') }}.jpg" alt="">
                     </div>
-                    <div style="padding-left: 30px;" class="col-sm-9">
+                    <div style="padding-left: 50px;" class="col-sm-9">
                         <div class="card-body">
                         <h5 class="card-title">{{ song['title'] }}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">{{ song['artist'] }} • {{ song['year'] }}</h6>
@@ -112,8 +112,10 @@
                 </div>
             </div>
             {% endfor %}
-        {% else %}
+        {% elif made_query == True and queried_music|length < 1 %}
             <i><h4>No result is retrieved. Please query again.</h4></i>
+        {% else %}
+            <i><h4>Make a query using the query area.</h4></i>
         {% endif %}
         
     </div>
